--- a/about/about.html
+++ b/about/about.html
@@ -31,7 +31,7 @@
   </header>
 
   <main>
-    <section class="about-gym-container">
+    <section class="about-gym-container reveal">
       <h1 class="about-title"> About Alpha Grind Lab </h1>
       <p class="about-description"> Alpha Gym is more than a fitness center — it’s a training ground for
       discipline, confidence, and personal growth. We exist to help people
@@ -39,7 +39,7 @@
       structured training, expert coaching, and a powerful community. </p>
     </section>
 
-    <section class="story-container">
+    <section class="story-container reveal">
       <h2 class="story-title"> Our Story </h2>
       <p class="story-paragraph"> Founded in Maypajo, Caloocan City, Alpha Gym started with a simple vision:
       create a space where anyone — beginner or athlete — can train with
@@ -48,29 +48,29 @@
     </section>
 
 
-    <section class="gallery-section">
+    <section class="gallery-section reveal">
       <h2 class="gallery-title"> Alpha Gallery </h2>
 
-      <div class="gallery-grid">
+      <div class="gallery-grid reveal">
 
-        <div class="gallery-card">
-          <img class="img-gallery" src="../../Images/alpha-pic-1.png">
+        <div class="gallery-card reveal">
+          <img class="img-gallery reveal" src="../../Images/alpha-pic-1.png">
           <p class="img-gallery-title"> Power Rack Area </p>
         </div>
-        <div class="gallery-card">
-          <img class="img-gallery" src="../../Images/alpha-pick-2.png">
+        <div class="gallery-card reveal">
+          <img class="img-gallery reveal" src="../../Images/alpha-pick-2.png">
           <h4 class="img-gallery-title"> Group Class Area  </h4>
         </div>
-        <div class="gallery-card">
-          <img class="img-gallery" src="../../Images/alpha-pic-3.png">
+        <div class="gallery-card reveal">
+          <img class="img-gallery reveal" src="../../Images/alpha-pic-3.png">
           <h4 class="img-gallery-title"> Alpha Fit Area  </h4>
         </div>
-        <div class="gallery-card">
-          <img class="img-gallery" src="../../Images/alpha-pic-4.png">
+        <div class="gallery-card reveal">
+          <img class="img-gallery reveal" src="../../Images/alpha-pic-4.png">
           <h4 class="img-gallery-title"> Alpha Fit Area (Other Angle)  </h4>
         </div>
-        <div class="gallery-card">
-          <img class="img-gallery" src="../../Images/alpha-pic-5.png">
+        <div class="gallery-card reveal">
+          <img class="img-gallery reveal" src="../../Images/alpha-pic-5.png">
           <h4 class="img-gallery-title"> Basketball Area  </h4>
         </div>
 
@@ -80,14 +80,14 @@
 
     <section class="about-mission-vision-container reveal">
       
-      <div class="mission-vision-card">
+      <div class="mission-vision-card reveal">
         <h2 class="mission-vision-title"> Our Mission </h2>
         <p class="mission-vision-paragraph"> To empower our members through professional coaching, structured
         programs, and a supportive environment that inspires lifelong
         fitness and confidence. </p>
       </div>
 
-      <div class="mission-vision-card">
+      <div class="mission-vision-card reveal">
         <h2 class="mission-vision-title"> Our Vision </h2>
         <p class="mission-vision-paragraph"> To become the leading community-based gym in Caloocan, known for
         transforming lives, building discipline, and creating future
@@ -96,7 +96,7 @@
     </section>
 
     <!-- TRANSFORMATION SECTION -->
-<section class="about-transform-container">
+<section class="about-transform-container reveal">
   <h2 class="about-section-title">Real Transformations</h2>
   <p class="about-section-subtitle">
     Results built through discipline, structure, and consistency.
@@ -104,7 +104,7 @@
 
   <div class="transform-grid">
 
-    <div class="transform-card">
+    <div class="transform-card reveal">
       <img src="../Images/transform-1.jpg" alt="Member Transformation" class="open-lightbox">
       <div class="transform-content">
         <h3>12kg Fat Loss</h3>
@@ -113,7 +113,7 @@
       </div>
     </div>
 
-    <div class="transform-card">
+    <div class="transform-card reveal">
       <img src="../Images/transform-2.jpg" alt="Member Transformation" class="open-lightbox">
       <div class="transform-content">
         <h3>+40kg Strength Increase</h3>
@@ -122,7 +122,7 @@
       </div>
     </div>
 
-    <div class="transform-card">
+    <div class="transform-card reveal">
       <img src="../Images/transform-3.jpg" alt="Member Transformation" class="open-lightbox">
       <div class="transform-content">
         <h3>Confidence Rebuilt</h3>
@@ -138,24 +138,24 @@
 <section class="philosophy-container reveal">
   <h2 class="about-section-title">Our Training Philosophy</h2>
 
-  <div class="philosophy-grid">
+  <div class="philosophy-grid reveal">
 
-    <div class="philosophy-card">
+    <div class="philosophy-card reveal">
       <h3>Discipline Over Motivation</h3>
       <p>We build habits that last. Motivation fades. Discipline stays.</p>
     </div>
 
-    <div class="philosophy-card">
+    <div class="philosophy-card reveal">
       <h3>Structured Programming</h3>
       <p>Every workout has purpose. No random training — only progression.</p>
     </div>
 
-    <div class="philosophy-card">
+    <div class="philosophy-card reveal">
       <h3>Progressive Over Ego</h3>
       <p>We focus on correct form and smart growth, not lifting for show.</p>
     </div>
 
-    <div class="philosophy-card">
+    <div class="philosophy-card reveal">
       <h3>Community First</h3>
       <p>We rise together. No judgment. No pressure. Only growth.</p>
     </div>
@@ -228,39 +228,39 @@
     Everything you need in one premium space — train, recover, and refresh.
   </p>
 
-  <div class="amenities-grid">
+  <div class="amenities-grid reveal">
 
-    <div class="amenity-card">
+    <div class="amenity-card reveal">
       <div class="amenity-icon">🏋️</div>
       <h3>Strength Zone</h3>
       <p>Power racks, free weights, and serious equipment for real progress.</p>
     </div>
 
-    <div class="amenity-card">
+    <div class="amenity-card reveal">
       <div class="amenity-icon">🔥</div>
       <h3>Conditioning Area</h3>
       <p>Functional training space for stamina, mobility, and performance.</p>
     </div>
 
-    <div class="amenity-card">
+    <div class="amenity-card reveal">
       <div class="amenity-icon">🥊</div>
       <h3>Boxing / Combat</h3>
       <p>Optional combat training for conditioning and confidence.</p>
     </div>
 
-    <div class="amenity-card">
+    <div class="amenity-card reveal">
       <div class="amenity-icon">💈</div>
       <h3>Barber Shop Inside</h3>
       <p>Train hard, look sharp. Cuts, fades, and grooming inside Alpha.</p>
     </div>
 
-    <div class="amenity-card">
+    <div class="amenity-card reveal">
       <div class="amenity-icon">🚿</div>
       <h3>Clean & Sanitized</h3>
       <p>Well-maintained areas and regular cleaning for a premium experience.</p>
     </div>
 
-    <div class="amenity-card">
+    <div class="amenity-card reveal">
       <div class="amenity-icon">🤝</div>
       <h3>Community Culture</h3>
       <p>Respectful environment — beginner friendly, athlete approved.</p>
@@ -270,10 +270,10 @@
 </section>
 
 
-    <section class="about-values">
+    <section class="about-values reveal">
       <h2> Our Core Values </h2>
 
-      <ul class="values-list">
+      <ul class="values-list reveal">
         <li> Discipline over motivation</li>
         <li> Respect for every athlete and beginner</li>
         <li> Consistency builds champions</li>
@@ -283,43 +283,43 @@
 
     </section>
 
-    <section class="about-why-container">
+    <section class="about-why-container reveal">
       <h2 class="about-why-title"> Why Choose Us? </h2>
 
-      <div class="about-why-card">
+      <div class="about-why-card reveal">
         <h3 class="about-why-content-title"> Certified Coaches </h3>
         <p class="about-why-paragraph"> Professionally trained instructors focused on safe and effective training.</p>
       </div>
 
-      <div class="about-why-card">
+      <div class="about-why-card reveal">
         <h3 class="about-why-content-title"> Supportive Community </h3>
         <p class="about-why-paragraph"> A welcoming environment that pushes you to grow without pressure.</p> 
       </div>
 
-      <div class="about-why-card">
+      <div class="about-why-card reveal">
         <h3 class="about-why-content-title"> Clean & Modern Facility </h3>
         <p class="about-why-paragraph"> Well-maintained equipment and sanitized training areas. </p>
       </div>
 
-      <div class="about-why-card">
+      <div class="about-why-card reveal">
         <h3 class="about-why-content-title"> Results-Driven Programs </h3>
         <p class="about-why-paragraph"> Structured plans designed for strength, fat loss, and performance. </p>
       </div>
     </section>
 
-    <section class="about-stats-container">
+    <section class="about-stats-container reveal">
       <h2 class="about-stats-title"> Alpha Milestones </h2>
-      <div class="stat-box">
+      <div class="stat-box reveal">
         <h2 data-target="500"> 500+ </h2>
         <p> Active Members </p>
       </div>
 
-      <div class="stat-box">
+      <div class="stat-box reveal">
         <h2 data-target="5" class="about-stats-title"> 5+ </h2>
         <p> Certified Trainers </p>
       </div>
 
-      <div class="stat-box">
+      <div class="stat-box reveal">
         <h2 data-target="4"> 4 </h2>
         <p> Years Serving Caloocan </p>
       </div>
@@ -332,7 +332,7 @@
         <p class="about-cta-paragraph"> Join a community that pushes you beyond limits and builds real strength.</p>
    
 
-    <div class="view-box"> 
+    <div class="view-box reveal"> 
       <a href="../pricing/pricing.html" class="about-cta-btn">
         View Membership Plans
       </a>
