--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     </section>
 
     <!-- GYM STATUS -->
-    <section class="gym-status-container">
+    <section class="gym-status-container reveal">
       <h3 class="gym-status-title">Status:</h3>
       <p id="gymStatus">Checking...</p>
     </section>
 
     <!-- STATS / ACHIEVEMENTS -->
-    <section class="stats-container">
+    <section class="stats-container reveal">
       <div class="stat-box">
         <h3>500+</h3>
         <p>Active Members</p>
@@ -85,46 +85,46 @@
     </section>
 
     <!-- WHY TRAIN WITH US -->
-    <section class="train-with-us-container">
+    <section class="train-with-us-container reveal">
       <h2 class="train-title">Why Train With Alpha?</h2>
 
-      <div class="train-card">
+      <div class="train-card reveal">
         <h3 class="card-title">Elite <b>Coaches</b></h3>
         <p class="card-paragraph">Certified trainers who design programs to maximize strength, endurance, and confidence.</p>
       </div>
 
-      <div class="train-card">
+      <div class="train-card reveal">
         <h3 class="card-title">Modern <b>Equipment</b></h3>
         <p class="card-paragraph">High-performance machines and free weights built for serious results.</p>
       </div>
 
-      <div class="train-card">
+      <div class="train-card reveal">
         <h3 class="card-title">Monday–Sunday <b>Open</b></h3>
         <p class="card-paragraph">Train on your time — no limits.</p>
       </div>
     </section>
 
     <!-- PROGRAMS -->
-    <section class="programs-container">
+    <section class="programs-container reveal">
       <h2 class="programs-title">Our Training Programs</h2>
 
-      <div class="programs-grid">
-        <div class="program-card">
+      <div class="programs-grid reveal">
+        <div class="program-card reveal">
           <h3>💪 Strength Training</h3>
           <p>Build muscle and increase power with structured lifting programs.</p>
         </div>
 
-        <div class="program-card">
+        <div class="program-card reveal">
           <h3>🔥 Fat Loss Program</h3>
           <p>Burn fat effectively with guided workouts and supportive coaching.</p>
         </div>
 
-        <div class="program-card">
+        <div class="program-card reveal">
           <h3>🏋 Personal Coaching</h3>
           <p>One-on-one sessions customized to your goals and schedule.</p>
         </div>
 
-        <div class="program-card">
+        <div class="program-card reveal">
           <h3>🥊 Functional Conditioning</h3>
           <p>Improve stamina, mobility, and athletic performance with full-body sessions.</p>
         </div>
@@ -132,10 +132,10 @@
     </section>
 
     <!-- OPERATING HOURS -->
-    <section class="hours-container">
+    <section class="hours-container reveal">
       <h2 class="hours-title">Operating Hours</h2>
 
-      <div class="hours-box">
+      <div class="hours-box reveal">
         <ul class="hours-list">
           <li><b>Monday – Friday:</b> 6:00 AM – 10:00 PM</li>
           <li><b>Saturday:</b> 7:00 AM – 9:00 PM</li>
@@ -146,10 +146,10 @@
     </section>
 
     <!-- GALLERY -->
-    <section class="gallery-container">
+    <section class="gallery-container reveal">
       <h2 class="gallery-title">Inside Alpha Gym</h2>
 
-      <div class="gallery-grid">
+      <div class="gallery-grid reveal">
         <!-- Replace these with your real images -->
         <img src="./Images/alpha-pic-1.png" alt="Alpha Gym equipment area" />
         <img src="./Images/alpha-pic-3.png" alt="Alpha Gym training floor" />
@@ -161,21 +161,21 @@
     </section>
 
     <!-- TESTIMONIALS -->
-    <section class="testimonials-container">
+    <section class="testimonials-container reveal">
       <h2 class="testimonials-title">What Our Members Say</h2>
 
-      <div class="testimonial-grid">
-        <div class="testimonial-card">
+      <div class="testimonial-grid reveal">
+        <div class="testimonial-card reveal">
           <p class="testi-title">"Alpha Gym changed my life. The coaches push you beyond your limits."</p>
           <h4 class="testi-name">— Mark R.</h4>
         </div>
 
-        <div class="testimonial-card">
+        <div class="testimonial-card reveal">
           <p class="testi-title">"Clean facility, great equipment, and insane motivation every session."</p>
           <h4 class="testi-name">— Sarah L.</h4>
         </div>
 
-        <div class="testimonial-card">
+        <div class="testimonial-card reveal">
           <p class="testi-title">"Best gym in town. Worth every peso."</p>
           <h4 class="testi-name">— James T.</h4>
         </div>
@@ -183,26 +183,26 @@
     </section>
 
     <!-- FAQ -->
-    <section class="faq-container">
+    <section class="faq-container reveal">
       <h2 class="faq-title">Frequently Asked Questions</h2>
 
-      <div class="faq-grid">
-        <div class="faq-item">
+      <div class="faq-grid reveal">
+        <div class="faq-item reveal">
           <h4>Do I need experience to join?</h4>
           <p>No. Beginners and advanced members are welcome — our coaches will guide you.</p>
         </div>
 
-        <div class="faq-item">
+        <div class="faq-item reveal">
           <h4>Do you offer personal training?</h4>
           <p>Yes. We offer 1-on-1 coaching tailored to your goals and schedule.</p>
         </div>
 
-        <div class="faq-item">
+        <div class="faq-item reveal">
           <h4>Can I visit before joining?</h4>
           <p>Yes! Message us through the Contact page to schedule a tour.</p>
         </div>
 
-        <div class="faq-item">
+        <div class="faq-item reveal">
           <h4>What should I bring?</h4>
           <p>Wear comfortable workout clothes, bring a towel, and a water bottle.</p>
         </div>
@@ -211,15 +211,15 @@
 
     <!-- BRANCHES -->
 <!-- BRANCHES (LUXURY) -->
-<section class="branches-container" id="branches">
+<section class="branches-container reveal" id="branches">
   <div class="branches-header">
     <h2 class="branches-title">Our Branches</h2>
     <p class="branches-subtitle">Luxury space. Alpha intensity. Five locations to level up.</p>
   </div>
 
-  <div class="branches-grid">
+  <div class="branches-grid reveal">
 
-    <article class="branch-card"
+    <article class="branch-card reveal"
       data-branch="Alpha Gym Maypajo – Main Branch"
       data-img="./Images/alpha-pic-1.png"
       data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.262802383937!2d120.97298157517585!3d14.641017876085758!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b55e5088d4d1%3A0x27dd5f121caca43d!2sAlpha%20Grind%20Lab%20-%20Maypajo%20Caloocan!5e0!3m2!1sen!2sph!4v1771460087852!5m2!1sen!2sph">
@@ -241,7 +241,7 @@
       </div>
     </article>
 
-    <article class="branch-card"
+    <article class="branch-card reveal"
       data-branch="Alpha Gym Recto"
       data-img="./Images/alpha-pic-3.png"
       data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.9713339614473!2d120.98819207517526!3d14.600708877073874!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c9cba91abbf5%3A0xe6c754dd77ebdf11!2sALPHA%20GRIND%20LAB%20RECTO!5e0!3m2!1sen!2sph!4v1771460161783!5m2!1sen!2sph">
@@ -263,7 +263,7 @@
       </div>
     </article>
 
-    <article class="branch-card"
+    <article class="branch-card reveal"
       data-branch="Alpha Gym Longos"
       data-img="./Images/alpha-pic-3.png"
       data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61760.78675719174!2d120.88391724863283!3d14.6531502!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b5ff46b2a9cd%3A0x9abb6764e2e5d7d7!2sAlpha%20Grind%20Lab!5e0!3m2!1sen!2sph!4v1771460313324!5m2!1sen!2sph">
@@ -285,7 +285,7 @@
       </div>
     </article>
 
-    <article class="branch-card"
+    <article class="branch-card reveal"
       data-branch="Alpha Gym Malabon"
       data-img="./Images/alpha-pic-5.png"
       data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.7511329707504!2d120.96556088050268!3d14.67005983884311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b56975f63d0b%3A0x6c85c9c945030582!2sAlpha%20Grind%20Lab%20-%20Tinajeros%20Malabon!5e0!3m2!1sen!2sph!4v1771460350618!5m2!1sen!2sph">
@@ -307,7 +307,7 @@
       </div>
     </article>
 
-    <article class="branch-card"
+    <article class="branch-card reveal"
       data-branch="Alpha Gym Sangandaan Caloocan"
       data-img="./Images/alpha-pic-1.png"
       data-map="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3859.7511329707504!2d120.96556088050268!3d14.67005983884311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b58ce125829b%3A0xa453961c8c9a125b!2sAlpha%20Grind%20Lab%20-%20Sangandaan%20Caloocan!5e0!3m2!1sen!2sph!4v1771460421043!5m2!1sen!2sph">
@@ -357,9 +357,9 @@
       </div>
     </div>
 
-    <div class="barber-right">
-      <div class="barber-card">
-        <div class="barber-img">
+    <div class="barber-right reveal">
+      <div class="barber-card reveal">
+        <div class="barber-img reveal">
           <!-- Replace with your real barber image -->
           <img class="barber-lightbox"  src="./Images/barber1.jpg" alt="Alpha Gym Barber Shop" loading="lazy" />
           <div class="barber-overlay"></div>
@@ -369,16 +369,16 @@
           <h3>Walk-in &amp; Appointment Available</h3>
           <p>Open daily • Fast service • Members get priority</p>
 
-          <div class="barber-mini">
-            <div class="barber-mini-box">
+          <div class="barber-mini reveal">
+            <div class="barber-mini-box reveal">
               <span class="mini-label">Avg. Time</span>
               <span class="mini-value">20–40 mins</span>
             </div>
-            <div class="barber-mini-box">
-              <span class="mini-label">Services</span>
+            <div class="barber-mini-box reveal">
+              <span class="mini-label reveal">Services</span>
               <span class="mini-value">Cut • Trim • Shave</span>
             </div>
-            <div class="barber-mini-box">
+            <div class="barber-mini-box reveal">
               <span class="mini-label">Vibe</span>
               <span class="mini-value">Luxury Lounge</span>
             </div>
@@ -393,8 +393,8 @@
 
 
 <!-- MAP MODAL (POPUP) -->
-<div id="mapModal" class="map-modal" aria-hidden="true">
-  <div class="map-backdrop" id="mapBackdrop"></div>
+<div id="mapModal" class="map-modal reveal" aria-hidden="true">
+  <div class="map-backdrop reveal" id="mapBackdrop"></div>
 
   <div class="map-dialog" role="dialog" aria-modal="true" aria-labelledby="mapTitle">
     <div class="map-topbar">
@@ -416,7 +416,7 @@
 
 
     <!-- CTA -->
-    <section class="cta-container">
+    <section class="cta-container reveal">
       <h2 class="cta-title">Ready To Transform Your Body?</h2>
       <p class="cta-paragraph">Start your journey today. No limits. No excuses. Just results.</p>
       <a href="./contact/contact.html" class="cta-button">Join Alpha Now</a>
@@ -425,12 +425,12 @@
   </main>
 
   <footer>
-    <section class="copyright-container">
+    <section class="copyright-container reveal">
       <h4 class="copyright-paragraph">© 2026 Alpha Gym — All Rights Reserved</h4>
       <h5 class="creator">Built by <span class="creator-design">Kurt Allen A. Marquez</span></h5>
 
       <!-- Optional social links -->
-      <div class="social-links">
+      <div class="social-links reveal">
         <a href="#" aria-label="Alpha Gym Facebook">Facebook</a>
         <a href="#" aria-label="Alpha Gym Instagram">Instagram</a>
         <a href="#" aria-label="Alpha Gym TikTok">TikTok</a>
@@ -475,5 +475,60 @@
  
 
 </div>
+
+
+<!-- =========================
+     FREE ALPHA FITNESS CHATBOT
+     (No API / No Backend)
+========================= -->
+<button id="fitBotFab" aria-label="Open Alpha Fitness Bot">💬</button>
+
+<div id="fitBot" class="fit-bot" aria-hidden="true">
+  <div class="fit-bot__header">
+    <div>
+      <div class="fit-bot__title">Alpha Fitness Bot</div>
+      <div class="fit-bot__subtitle">Free • Fitness-only • Plans • Meals • Motivation</div>
+    </div>
+
+    <div class="fit-bot__headerActions">
+      <button id="fitBotMode" type="button" class="fit-bot__mode">🧠 Friendly</button>
+      <button id="fitBotClose" class="fit-bot__close" aria-label="Close">✕</button>
+    </div>
+
+  </div>
+
+  <div id="fitBotMsgs" class="fit-bot__msgs" aria-live="polite"></div>
+
+  <div class="fit-bot__chips" id="fitBotChips">
+    <button class="chip" data-msg="setup">⚙️ Setup</button>
+    <button class="chip" data-msg="today">🏋️ Today</button>
+    <button class="chip" data-msg="make me a 3-day beginner muscle gain plan">3-day muscle</button>
+    <button class="chip" data-msg="fat loss workout for today beginner">Fat loss today</button>
+    <button class="chip" data-msg="meal ideas for muscle gain budget">Budget meals</button>
+    <button class="chip" data-msg="motivate me">Motivation</button>
+    <button class="chip" data-msg="streak">🔥 Streak</button>
+  </div>
+
+  <div class="fit-bot__tools">
+    <button id="fitBotSetup" type="button">⚙️ Coach Setup</button>
+    <button id="fitBotToday" type="button">🏋️ Today’s Workout</button>
+    <button id="fitBotMeals" type="button">🍱 Meal Ideas</button>
+    <button id="fitBotVoice" type="button">🔊 Voice: Off</button>
+  </div>
+
+  <form id="fitBotForm" class="fit-bot__input" autocomplete="off">
+    <input id="fitBotText" type="text" placeholder="Say hi, or ask about workouts, diet, recovery..." />
+    <button type="submit">Send</button>
+  </form>
+
+  <div class="fit-bot__footer">
+    <small>Not medical advice. For injuries/conditions, consult a professional.</small>
+    <button id="fitBotClear" type="button" class="fit-bot__clear">Clear</button>
+  </div>
+</div>
+
+
+<script src="index.js"></script>
+  <script src="/common.js"></script>
 </body>
 </html>
