--- a/pricing/pricing.html
+++ b/pricing/pricing.html
@@ -50,26 +50,26 @@
   <section class="pricing-compare-container reveal">
     <h2 class="pricing-compare-title">Quick Compare</h2>
 
-    <div class="compare-grid">
-      <div class="compare-card">
+    <div class="compare-grid reveal">
+      <div class="compare-card reveal">
         <h3>Best for Starters</h3>
         <p>₱1500 / month</p>
         <span class="compare-tag">Most Flexible</span>
       </div>
 
-      <div class="compare-card">
+      <div class="compare-card reveal">
         <h3>Best Value</h3>
         <p>₱5000 / 3 months</p>
         <span class="compare-tag">Popular</span>
       </div>
 
-      <div class="compare-card">
+      <div class="compare-card reveal">
         <h3>Best Results</h3>
         <p>₱8000 / 6 months</p>
         <span class="compare-tag">Consistency</span>
       </div>
 
-      <div class="compare-card">
+      <div class="compare-card reveal">
         <h3>All-In</h3>
         <p>₱11,000 / year</p>
         <span class="compare-tag">Priority</span>
@@ -78,10 +78,10 @@
   </section>
 
   <!-- Pricing Cards -->
-  <section class="pricing-cards-container">
+  <section class="pricing-cards-container reveal">
     <h2 class="pricing-cards-title reveal">Our Price</h2>
 
-    <div class="main-cards-container">
+    <div class="main-cards-container reveal">
 
       <div class="price-card reveal">
         <a href="../contact/contact.html">
@@ -90,7 +90,7 @@
             <p class="price-sub">Great for beginners & casual training</p>
           </div>
 
-          <ul class="cards-lists">
+          <ul class="cards-lists reveal">
             <li>Unlimited gym access</li>
             <li>Free fitness assessment</li>
             <li>Locker room access</li>
@@ -103,13 +103,13 @@
 
       <div class="price-card featured reveal">
         <a href="../contact/contact.html">
-          <div class="price-head">
+          <div class="price-head reveal">
             <div class="featured-badge">MOST POPULAR</div>
             <h2 class="card-title-content">₱5000 <span>/ 3 months</span></h2>
             <p class="price-sub">Best value + guided training boost</p>
           </div>
 
-          <ul class="cards-lists">
+          <ul class="cards-lists reveal">
             <li>Unlimited gym access</li>
             <li>2 personal training sessions</li>
             <li>Access to group classes (Zumba, HIIT)</li>
@@ -127,7 +127,7 @@
             <p class="price-sub">For serious consistency & progress</p>
           </div>
 
-          <ul class="cards-lists">
+          <ul class="cards-lists reveal">
             <li>Unlimited gym + class access</li>
             <li>Monthly personal training session</li>
             <li>Customized workout program</li>
@@ -162,7 +162,7 @@
     <section class="pricing-includes-container reveal">
       <h2 class="includes-title">What’s Included in All Plans</h2>
 
-      <div class="includes-grid">
+      <div class="includes-grid reveal">
         <div class="include-item">✅ Safe & Clean Facility</div>
         <div class="include-item">✅ Strength + Cardio Zones</div>
         <div class="include-item">✅ Community Support</div>
@@ -177,22 +177,22 @@
     Customize your membership — add coaching for faster results or book the barber lounge inside Alpha.
   </p>
 
-  <div class="addons-grid">
+  <div class="addons-grid reveal">
     <!-- Coaching -->
-    <div class="addon-card">
+    <div class="addon-card reveal">
       <div class="addon-top">
         <h3>🏋️ Personal Coaching</h3>
         <span class="addon-tag">Performance Upgrade</span>
       </div>
       <p>1-on-1 sessions with a coach. Perfect for beginners, fat loss, and strength goals.</p>
 
-      <ul class="addon-list">
+      <ul class="addon-list reveal">
         <li>✅ Form correction & progress tracking</li>
         <li>✅ Customized workout plan</li>
         <li>✅ Monthly check-ins</li>
       </ul>
 
-      <div class="addon-actions">
+      <div class="addon-actions reveal">
         <a class="addon-btn primary" href="../contact/contact.html#contactForm">Request Coaching</a>
         <a class="addon-btn secondary" href="../trainers/trainers.html">Meet Coaches</a>
       </div>
@@ -206,13 +206,13 @@
       </div>
       <p>Train hard, look sharper. Grooming services available inside select branches.</p>
 
-      <ul class="addon-list">
+      <ul class="addon-list reveal">
         <li>✅ Haircut / Fade / Classic Cut</li>
         <li>✅ Beard trim & line-up</li>
         <li>✅ Wash & style (optional)</li>
       </ul>
 
-      <div class="addon-actions">
+      <div class="addon-actions reveal">
         <a class="addon-btn primary" href="../contact/contact.html#booking">Book Barber</a>
         <a class="addon-btn secondary" href="../contact/contact.html#branchSelect">Find Branch</a>
       </div>
@@ -245,7 +245,7 @@
   <h2 class="plan-compare-title">Compare Plans</h2>
   <p class="plan-compare-subtitle">Quick view of what’s included. Tap on mobile to scroll.</p>
 
-  <div class="table-wrap">
+  <div class="table-wrap reveal">
     <table class="plan-table">
       <thead>
         <tr>
@@ -322,34 +322,34 @@
   <h2 class="join-steps-title">How to Join</h2>
   <p class="join-steps-subtitle">Simple, fast, and transparent — no hidden steps.</p>
 
-  <div class="steps-grid">
-    <div class="step-card">
+  <div class="steps-grid reveal">
+    <div class="step-card reveal">
       <span class="step-num">01</span>
       <h3>Choose a Plan</h3>
       <p>Select the plan that matches your schedule and goal.</p>
     </div>
 
-    <div class="step-card ">
+    <div class="step-card reveal ">
       <span class="step-num">02</span>
       <h3>Message Alpha</h3>
       <p>Send your details through our Contact page — we reply fast.</p>
     </div>
 
-    <div class="step-card">
+    <div class="step-card reveal">
       <span class="step-num">03</span>
       <h3>Pay & Start</h3>
       <p>Pay via cash/GCash/bank and begin your transformation.</p>
     </div>
   </div>
 
-  <div class="guarantee-card">
+  <div class="guarantee-card reveal">
     <h3>🔒 Alpha Guarantee</h3>
     <p>
       Transparent pricing. Clean facility. Supportive coaching options.
       If you’re a beginner — we guide you properly from day one.
     </p>
 
-    <div class="guarantee-badges">
+    <div class="guarantee-badges reveal">
       <div class="g-badge">✅ No Hidden Fees</div>
       <div class="g-badge">✅ Beginner Guidance</div>
       <div class="g-badge">✅ Safe & Clean</div>
@@ -374,7 +374,7 @@
 
     
 
-    <div class="follow-container">
+    <div class="follow-container reveal">
       <div class="follow-card reveal">
         <a href="../contact/contact.html">
           <p class="wait-title">Check Our Social Media Accounts!</p>
@@ -384,7 +384,7 @@
   </section>
 
   <!-- FAQ -->
-  <section class="faq-container">
+  <section class="faq-container reveal">
     <h2 class="faq-title reveal">Frequently Asked Questions</h2>
 
     <div class="faq-item-card reveal">
