--- a/trainers/trainers.html
+++ b/trainers/trainers.html
@@ -38,7 +38,7 @@
       Our team is built on discipline, results, and real support. Whether you’re a beginner or an athlete, we guide you with proper form, smart programming, and serious motivation.
     </p>
 
-    <div class="team-badges">
+    <div class="team-badges reveal">
       <div class="badge">✅ Certified Coaching</div>
       <div class="badge">🏋️ Strength & Conditioning</div>
       <div class="badge">💬 Friendly Community</div>
@@ -47,13 +47,13 @@
 
   <!-- NEW: SEARCH / FILTER -->
   <section class="team-tools-container reveal">
-    <div class="team-tools">
+    <div class="team-tools reveal">
       <div class="team-search">
         <label for="teamSearch" class="team-label">Search</label>
         <input id="teamSearch" class="team-input" type="text" placeholder="Search name, role, specialty..." />
       </div>
 
-      <div class="team-filter">
+      <div class="team-filter reveal">
         <label for="teamFilter" class="team-label">Filter</label>
         <select id="teamFilter" class="team-select">
           <option value="all" selected>All Team</option>
@@ -64,7 +64,7 @@
         </select>
       </div>
 
-      <div class="team-actions">
+      <div class="team-actions reveal">
         <a class="team-tools-btn" href="../contact/contact.html#booking">Book Now</a>
         <a class="team-tools-btn ghost" href="../contact/contact.html#branchSelect">Select Branch</a>
       </div>
@@ -75,23 +75,23 @@
   <section class="team-services-container reveal">
     <h2 class="team-services-title">What We Help You With</h2>
 
-    <div class="team-services-grid">
+    <div class="team-services-grid reveal">
       <div class="service-card">
         <h3>💪 Strength & Muscle</h3>
         <p>Progressive training plans designed for real strength and size.</p>
       </div>
 
-      <div class="service-card">
+      <div class="service-card reveal">
         <h3>🔥 Fat Loss & Conditioning</h3>
         <p>High-efficiency training + support to keep your routine locked in.</p>
       </div>
 
-      <div class="service-card">
+      <div class="service-card reveal">
         <h3>🧠 Beginner Guidance</h3>
         <p>Form checks, machine guidance, and a plan that keeps you safe.</p>
       </div>
 
-      <div class="service-card">
+      <div class="service-card reveal">
         <h3>💈 Grooming (Barber Lounge)</h3>
         <p>Train hard, look sharper. Cuts, fades, lineups inside selected branches.</p>
       </div>
@@ -99,7 +99,7 @@
   </section>
 
   <!-- OWNER / HEAD COACH -->
-  <section class="team-section">
+  <section class="team-section reveal">
     <h2 class="team-section-title reveal">Owner</h2>
 
     <div class="big-boss-card reveal team-card" data-type="owner" data-name="Rafael Demagiba Alpha Lab Owner Leadership Community Gym Operations">
@@ -116,13 +116,13 @@
           Focused on discipline, results, and a culture that pushes you forward.
         </p>
 
-        <div class="boss-tags">
+        <div class="boss-tags reveal">
           <span class="tag">Leadership</span>
           <span class="tag">Community</span>
           <span class="tag">Gym Operations</span>
         </div>
 
-        <div class="boss-cta">
+        <div class="boss-cta reveal">
           <a class="boss-btn" href="../contact/contact.html#contactForm">Message the Team</a>
           <a class="boss-btn ghost" href="../contact/contact.html#booking">Book Session</a>
         </div>
@@ -131,10 +131,10 @@
   </section>
 
   <!-- STAFF -->
-  <section class="team-section">
+  <section class="team-section reveal">
     <h2 class="team-section-title reveal">Staff</h2>
 
-    <div class="staff-card-grid">
+    <div class="staff-card-grid reveal">
 
       <div class="staff-card reveal team-card" data-type="staff" data-name="Trisha Ann Malilin Manager Support Operations">
         <div class="avatar-wrap">
@@ -201,13 +201,13 @@
   </section>
 
   <!-- BARBERS -->
-  <section class="team-section">
+  <section class="team-section reveal">
     <h2 class="team-section-title reveal">Barbers</h2>
     <p class="team-section-sub reveal">
       Fresh cut after training? We’ve got you. Available on selected days — ask the front desk for schedule.
     </p>
 
-    <div class="barbers-card-grid">
+    <div class="barbers-card-grid reveal">
 
       <div class="barbers-card reveal team-card" data-type="barber" data-name="Delgado Barber Fade Lineup">
         <div class="avatar-wrap">
@@ -271,16 +271,16 @@
     <h2 class="team-schedule-title">Weekly Availability (Sample)</h2>
     <p class="team-schedule-sub">Schedules may vary by branch. Message us to confirm.</p>
 
-    <div class="schedule-grid">
-      <div class="schedule-item">
+    <div class="schedule-grid reveal">
+      <div class="schedule-item reveal">
         <span class="day">Mon – Fri</span>
         <span class="time">Coaching: 10AM – 8PM</span>
       </div>
-      <div class="schedule-item">
+      <div class="schedule-item reveal">
         <span class="day">Saturday</span>
         <span class="time">Coaching: 9AM – 6PM</span>
       </div>
-      <div class="schedule-item">
+      <div class="schedule-item reveal">
         <span class="day">Sunday</span>
         <span class="time">Barber: 12PM – 7PM</span>
       </div>
