--- a/contact/contact.html
+++ b/contact/contact.html
@@ -189,7 +189,7 @@
 </div>
 
       <div class="form-group reveal">
-        <input type="text" name="Name" required placeholder="type your name">
+        <input type="text" name="Name" required placeholder="Type your name">
         
       </div>
 
@@ -209,7 +209,7 @@
       </div>
 
       <div class="form-group reveal">
-        <textarea name="Message" rows="5" required placeholder="Your Message"></textarea>
+        <textarea name="Message" rows="5" placeholder="Your Message (optional)"></textarea>
       </div>
 
       <div class="form-group reveal">
