--- a/trainers/trainers.html
+++ b/trainers/trainers.html
@@ -66,7 +66,6 @@
 
       <div class="team-actions reveal">
         <a class="team-tools-btn" href="../contact/contact.html#booking">Book Now</a>
-        <a class="team-tools-btn ghost" href="../contact/contact.html#branchSelect">Select Branch</a>
       </div>
     </div>
   </section>
@@ -268,7 +267,7 @@
 
   <!-- NEW: WEEKLY SCHEDULE TEASER -->
   <section class="team-schedule-container reveal">
-    <h2 class="team-schedule-title">Weekly Availability (Sample)</h2>
+    <h2 class="team-schedule-title">Weekly Availability</h2>
     <p class="team-schedule-sub">Schedules may vary by branch. Message us to confirm.</p>
 
     <div class="schedule-grid reveal">
