--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
      FREE ALPHA FITNESS CHATBOT
      (No API / No Backend)
 ========================= -->
-<button id="fitBotFab" aria-label="Open Alpha Fitness Bot">💬</button>
+<button id="fitBotFab" aria-label="Open Alpha Fitness Bot">🤖</button>
 
 <div id="fitBot" class="fit-bot" aria-hidden="true">
   <div class="fit-bot__header">
@@ -557,6 +557,11 @@
     <button id="fitBotClear" type="button" class="fit-bot__clear">Clear</button>
   </div>
 </div>
+
+<div id="mobileCtaMount" aria-hidden="true"></div>
+
+<!-- ===== FREE PASS POPUP MOUNT (injected by JS) ===== -->
+<div id="promoMount" aria-hidden="true"></div>
 
 
 <script src="index.js"></script>
