--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
       <p id="gymStatus">Checking...</p>
     </section>
 
+   <section class="alpha-announce alpha-announce--glow" aria-label="Upcoming announcements">
+  <div class="alpha-announce__inner">
+
+    <span class="alpha-announce__pill">
+      <span class="alpha-announce__dot" aria-hidden="true"></span>
+      URGENT • UPCOMING
+    </span>
+
+    <div class="alpha-announce__copy">
+      <p class="alpha-announce__title">ALPHA ANNOUNCEMENT INCOMING</p>
+      <p class="alpha-announce__sub">
+        Wait for the announcement — upcoming events, exclusive promos, and special updates are coming soon.
+      </p>
+    </div>
+
+    <div class="alpha-announce__shine" aria-hidden="true"></div>
+  </div>
+</section>
+
     <!-- STATS / ACHIEVEMENTS -->
     <section class="stats-container reveal">
       <div class="stat-box">
