--- a/contact/contact.html
+++ b/contact/contact.html
@@ -194,7 +194,7 @@
       </div>
 
       <div class="form-group reveal">
-        <input type="email" name="Email" required placeholder="Email Address">
+        <input type="email" name="email" required placeholder="Email Address">
 
       </div>
 
