fix image owner

--- a/trainers/trainers.html
+++ b/trainers/trainers.html
@@ -103,12 +103,12 @@
 
     <div class="big-boss-card reveal team-card" data-type="owner" data-name="Rafael Demagiba Alpha Lab Owner Leadership Community Gym Operations">
       <div class="boss-img-wrap">
-        <img class="img-meet-boss open-lightbox" src="../../Images/kurt-png.png" alt="Owner Photo" />
+        <img class="img-meet-boss open-lightbox" src="../Images/gym-owner.png" alt="Owner Photo" />
       </div>
 
       <div class="boss-content">
         <h3 class="img-title">Alpha Lab Owner</h3>
-        <p class="img-name">Rafael Demagiba</p>
+        <p class="img-name">Allan John Lacanilao</p>
 
         <p class="boss-bio">
           Built Alpha Grind Lab with one goal: create a training space where anyone can level up.
